# approx-opaque-topk

./: .gitignore  README.md  analyze_gt_solution.py  bandit.py  bandit_expr.py  batch_size_mem.py  bisecting_kmeans_builder.py  bk1.json  combine_results.py  hierarchical_kmeans_builder.py  hk1.json  image_index_builder.py  index_builder.py  pyproject.toml  requirements.txt  run_expr.py  run_gt.py  scorers.py  subsample_cars.py  visualize_index.py
bandit/: bandit.py  histogram.py  index.py  limited_pq.py  sampler.py  samplers.py  scorers.py
experiments/: README.md
experiments/1-Synthetic/: k100_all.json  k100_gt.json  test.json
experiments/2-1-Synthetic-k10/: k10_all.json  k10_gt.json
experiments/2-2-Synthetic-k500/: k500_gt.json
experiments/2-4-Synthetic-Narrow/: narrow_gt.json
experiments/3-UsedCars/: ablation.json  all.json  epsgreedy.json  explore.json  gt.json  sample.json  test.json  ucb.json
experiments/UsedCars/: sample.json
experiments/imagenet-classify/: all-8.json  scan-103.json  scan-334.json  scan-464.json  scan-50.json  scan-587.json  scan-732.json  scan-758.json  scan-8.json  scan-809.json  scan-907.json
experiments/imagenet-error/: gt.json
experiments/overhead/: config.json  (+2 more)
index/: cifar100-100.txt  cifar100-50.txt  index_builder.py  pixel_index_builder.py  synthetic_index_builder.py
index_builder/: README.md  builder.py  car_data_train.ipynb  clean_car_data.ipynb  pixel_index_builder.py  synthetic_index_builder.py  tabular_index_builder.py
plots/: analyze_gt_solution.ipynb  batch_size_plot.ipynb  plotter.ipynb
reproducibility/: reproducibility.md
(+77 files in other folders)
